# antigravity2claudecode

./: .gitignore  LICENSE  PLAN.md  README.md  alembic.ini  pyproject.toml  pyrightconfig.json
docs/: KNOWN_ISSUES.md
src/a2c/: __init__.py
src/a2c/cli/: __init__.py  main.py
src/a2c/core/: __init__.py  converter.py  streaming.py  token_estimator.py
src/a2c/debug/: __init__.py  database.py  models.py  store.py
src/a2c/debug/migrations/: env.py
src/a2c/debug/migrations/versions/: 20260101_0000_initial_create_debug_tables.py
src/a2c/providers/: __init__.py  anthropic.py  antigravity.py  base.py  gemini.py  openai.py  registry.py
src/a2c/router/: __init__.py  config.py  failover.py  rules.py
src/a2c/server/: __init__.py  app.py  config.py
src/a2c/server/middleware/: __init__.py  logging.py
src/a2c/server/routes/: __init__.py  admin.py  anthropic.py  debug.py  health.py
src/a2c/server/websocket/: __init__.py  events.py  routes.py
src/antigravity2claudecode/: __init__.py  helpers.py
tests/: __init__.py  test_converter.py  test_streaming.py  test_token_estimator.py
tests/integration/: test_api_endpoints.py
tests/unit/: __init__.py  test_config.py  test_failover.py  test_failover_edge_cases.py  test_gemini_edge_cases.py  test_gemini_provider.py  test_openai_edge_cases.py  test_openai_provider.py  test_providers.py  test_router.py
ui/: package-lock.json  package.json  tsconfig.app.json  vite.config.ts
ui/coverage/: coverage-final.json  index.html
ui/coverage/components/ui/: badge.tsx.html  button.tsx.html  card.tsx.html  index.html
ui/e2e/: dashboard.spec.ts  debug.spec.ts  fixtures.ts  logs.spec.ts  navigation.spec.ts  providers.spec.ts  routing.spec.ts  settings.spec.ts
ui/src/: App.tsx  index.css
ui/src/components/: ErrorBoundary.tsx  Layout.tsx
ui/src/components/ui/: badge-variants.ts  badge.test.tsx  button-variants.ts  button.test.tsx  card.test.tsx  progress.tsx  tooltip.tsx
ui/src/hooks/: useWebSocket.ts
ui/src/pages/: Dashboard.tsx  Debug.tsx  Logs.tsx  Providers.tsx  Routing.tsx  Settings.tsx
ui/src/test/: setup.ts
