[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "a2c"
version = "0.1.0"
description = "AI API Router and Proxy - Route requests to multiple AI providers with intelligent routing, debugging, and web UI"
readme = "README.md"
license = "MIT"
authors = ["Louis <louisnewmobile@gmail.com>"]
keywords = [
    "anthropic",
    "claude",
    "gemini",
    "openai",
    "api",
    "proxy",
    "router",
    "streaming",
    "thinking",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Typing :: Typed",
]
packages = [
    { include = "a2c", from = "src" },
    { include = "antigravity2claudecode", from = "src" },
]

[tool.poetry.urls]
Homepage = "https://github.com/nikketryhard/a2c"
Repository = "https://github.com/nikketryhard/a2c"
Issues = "https://github.com/nikketryhard/a2c/issues"

[tool.poetry.scripts]
a2c = "a2c.cli.main:app"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
fastapi = ">=0.109.0"
uvicorn = { version = ">=0.27.0", extras = ["standard"] }
httpx = ">=0.26.0"
pydantic = ">=2.5.0"
pydantic-settings = ">=2.1.0"
sqlalchemy = { version = ">=2.0.0", extras = ["asyncio"] }
asyncpg = ">=0.29.0"
typer = { version = ">=0.9.0", extras = ["all"] }
rich = ">=13.0.0"
pyyaml = ">=6.0.0"
python-dotenv = ">=1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.0"
pytest-asyncio = ">=0.21"
pytest-cov = ">=4.0"
pytest-httpx = ">=0.28.0"
ruff = ">=0.1.0"
mypy = ">=1.0"
factory-boy = ">=3.3.0"
playwright = ">=1.40.0"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
